# ddapi

./: .gitignore  CHANGELOG.md  DEVGUIDE.md  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
ci/: Dockerfile  Jenkinsfile  test_requirements.txt
dd/: __init__.py  dataflow.py  ddhook.py  nbintegration.py  operators.py
dd/api/: __init__.py
dd/api/contexts/: __init__.py  base.py  distributed.py  local.py  reader.py  utils.py
dd/api/contexts/tests/: stub.csv  tests_distributed.py  tests_local.py  tests_reader.py
dd/api/workflow/: actions.py  base.py  callables.py  dataset.py  flow_functions.py  model.py  readers.py  sql.py  utils.py
dd/api/workflow/tests/: tests_actions.py  tests_callables.py  tests_dataset.py  tests_model.py  tests_sql.py  tests_utils.py
dd/db/: __init__.py  db_arrow.py  db_sql.py
dd/db/tests/: tests_db_arrow.py  tests_db_sql.py
dd/db/tests/db_integration/: __init__.py  tests_db_integration.py
dd/tests/: tests_operators.py
dd/tests/acceptance/: __init__.py  tests_functional_nb.py
dd/tests/acceptance/getting_started/: 0-DatadriverForDataScientists_Part1.ipynb  1-DatadriverForDataScientists_Part2.ipynb  2-AdvancedDataDriver_Caching.ipynb  3-AdvancedDatadriver_WriteOptions.ipynb  4-AdvancedDatadriver_SQL.ipynb  TestsAcceptance_Reader.ipynb
docs/: Makefile  conf.py  dbapi.rst  devguide.rst  faq.rst  index.rst  tutorial.rst
