[metadata]
name = pyddapi
version = 3.0.4.dev0
author = BDA TEAM
author_email = datadriver@octo.com
url = http://datadriver-doc-ddapi.s3-website-eu-west-1.amazonaws.com/
license = Apache 2
description= DataDriver API package
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6

[aliases]
test=pytest

[options]
packages = find:
zip_safe = False
include_package_data = True

install_requires =
    pandas>=0.23.4
    scikit-learn==0.19.*
    scikit-learn[alldeps]==0.19.*
    scipy
    six>=1.10.*
    apache-airflow==1.10.*
    apache-airflow[postgres,s3]==1.10.*
    ipython
    odo-fixpandas20==0.5.3
    dask>=0.15.0
    db.py>=0.5.2
    pybars3==0.9.*
    sqlalchemy==1.2.*
    psycopg2-binary>=2.6.*
    pyarrow==0.12.*
    minio==4.0.4
    boto3

[options.package_data]
* = *.csv, *.ipynb

[zest.releaser]
no-input = yes
release = no
create-wheel = yes

[bdist_wheel]
universal = 1

[build-system]
requires = setuptools; wheel>=0.31.*

[tool:pytest]
python_files = *tests/*.py

markers =
    functional: run tutorial notebooks to validate API usages
    integration: run integration against datastores (typically needs docker to run in local a Minio Server)

junit_suite_name = reports/coverage.xml

filterwarnings =
    ignore::Warning

addopts =
    --cov=dd
    --cov-append
    --cov-report html:reports
    --cov-report xml:reports/coverage.xml
    --junitxml=reports/xunit_reports.xml
    -k "not integration and not functional"